// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList should match snapshot with no tasks 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="epibvz0-el-intent-secondary evmehgn-el-is-active e1qwk99x-el-pn-is-full-width e15e3rd4-el-pn-is-inline erhlo5n-el-persistent-notification"
      >
        <div
          class="eta6kcl-el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="e1geon40-el-pn-content"
        >
          No progress reported for this deployment
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="epibvz0-el-intent-secondary evmehgn-el-is-active e1qwk99x-el-pn-is-full-width e15e3rd4-el-pn-is-inline erhlo5n-el-persistent-notification"
    >
      <div
        class="eta6kcl-el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg />
        </span>
      </div>
      <div
        class="e1geon40-el-pn-content"
      >
        No progress reported for this deployment
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TaskList should match snapshot with tasks 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="ejadz4k-el-table"
      >
        <div
          class="f141c8gf-four-col-table e1ijk5il-el-table-headers-row"
        >
          <div
            class="e1co3p83-el-table-header"
          >
            Task
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Status
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Started
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Finished
          </div>
        </div>
        <div
          class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
        >
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              Download Source
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              <span
                class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
              />
              Succeeded
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              -
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              -
            </div>
          </div>
        </div>
        <div
          class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
        >
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              Install
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              <span
                class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
              />
              Succeeded
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              -
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              -
            </div>
          </div>
        </div>
        <div
          class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
        >
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              Build
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              <span
                class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
              />
              Succeeded
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              -
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              -
            </div>
          </div>
        </div>
        <div
          class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
        >
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              Deploy
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              <span
                class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
              />
              Succeeded
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              -
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
            >
              -
            </div>
          </div>
        </div>
      </div>
      <div
        class="e1s056ze-el-mt6"
      >
        <button
          class="epibvz0-el-intent-secondary e1tqqdf9-el-button"
          disabled=""
        >
          Download Logs
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="ejadz4k-el-table"
    >
      <div
        class="f141c8gf-four-col-table e1ijk5il-el-table-headers-row"
      >
        <div
          class="e1co3p83-el-table-header"
        >
          Task
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Status
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Started
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Finished
        </div>
      </div>
      <div
        class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
      >
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            Download Source
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            <span
              class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
            />
            Succeeded
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            -
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            -
          </div>
        </div>
      </div>
      <div
        class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
      >
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            Install
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            <span
              class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
            />
            Succeeded
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            -
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            -
          </div>
        </div>
      </div>
      <div
        class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
      >
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            Build
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            <span
              class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
            />
            Succeeded
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            -
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            -
          </div>
        </div>
      </div>
      <div
        class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
      >
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            Deploy
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            <span
              class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
            />
            Succeeded
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            -
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-cell"
        >
          <div
            class="e4zpaja-el-table-cell-content"
          >
            -
          </div>
        </div>
      </div>
    </div>
    <div
      class="e1s056ze-el-mt6"
    >
      <button
        class="epibvz0-el-intent-secondary e1tqqdf9-el-button"
        disabled=""
      >
        Download Logs
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
